--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,6 @@
 body {
-  margin-left:3rem;
-  background-color:  #0099cc; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(white,  #0099cc); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white,  #0099cc); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white,  #0099cc); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white,  #0099cc); /* Standard syntax */
+  background-color:  #008B95; /* For browsers that do not support gradients */
+  font-family: 'Shrikhand', cursive;
 }
 
 .jumbotron{
@@ -14,12 +10,43 @@ body {
     height:70rem;
 }
 
+#header{
+
+    font-family: 'Lato', sans-serif;
+}
+
+.jumbotron h1{
+    font-size:110px;
+}
+
+#content ul{
+    display: inline-block;
+    vertical-align:top;
+}
+
+.info {
+
+    margin-right:10px;
+    margin-bottom:10px;
+    padding-left:5px;
+    border-radius:5px;
+    background-color:#EEAA7A;
+}
+
 #wrapper {
   min-height:100%;
   position: relative;
+  margin-top: 2rem;
 }
 
+.list-group-item{
+    background-color:#EEAA7A;
+}
 
 html {
   height:100%;
 }
+  background: -webkit-linear-gradient(white,  #0099cc); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white,  #0099cc); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white,  #0099cc); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white,  #0099cc); /* Standard syntax */
