--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,6 @@ body {
 }
 
 #content ul{
-    display: inline-block;
     vertical-align:top;
 }
 
@@ -33,9 +32,13 @@ body {
     background-color:#EEAA7A;
 }
 
+.info :hover {
+
+    text-shadow: 2px 2px;
+}
+
 #wrapper {
   min-height:100%;
-  position: relative;
   margin-top: 2rem;
 }
 
@@ -46,7 +49,3 @@ body {
 html {
   height:100%;
 }
-  background: -webkit-linear-gradient(white,  #0099cc); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white,  #0099cc); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white,  #0099cc); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white,  #0099cc); /* Standard syntax */
